# 2025winter-NC-State-Gears

./: README.md
Backend/: pyproject.toml
Backend/app/: __init__.py  config.py  models.py
Backend/app/routes/: admin.py  auth.py  polls.py
Gears-Frontend/: config.ts  package-lock.json  package.json  typed-router.d.ts  vite.config.mts
Gears-Frontend/src/: config.ts  vue.d.ts
Gears-Frontend/src/pages/: Login.vue  Register.vue  index.vue
Gears-Frontend/src/pages/main/: index.vue
Gears-Frontend/src/plugins/: index.ts
Gears-Frontend/src/stores/: app.ts
LLM QA chain + RAG/: chat_utils.py  get_answer.py  query_process.py
LLM QA chain + RAG/Process_chroma_db/: chroma.sqlite3
llm+nag/: 1.txt  langchain+nag.py
llm+nag/chroma_db/: chroma.sqlite3
